<resources>
    <string name="app_name">AgriFarm</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_delete">Delete Account(Debug)</string>
    <string name="action_sign_out">Sign Out (Debug)</string>
    <string name="agriculture">Agriculture</string>
    <string name="Btn_Lang_Eng" translatable="false">English</string>
    <string name="Btn_Lang_Urdu" translatable="false">اردو</string>

    <string name="title_activity_language">LanguageActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_user_fullname">Full Name</string>
    <string name="prompt_user_occupation">Occupation</string>
    <string name="prompt_user_age">Age</string>
    <string name="prompt_user_location">City</string>

    <string name="action_get_started">Get Started</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1113488918840348</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1113488918840348</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
